--- a/src/static/style.less
+++ b/src/static/style.less
@@ -46,6 +46,7 @@ time {
 
 footer {
     text-align: center;
+    margin-top: 2em;
 }
 
 // index page
@@ -66,4 +67,10 @@ footer {
 
 dd + dt {
     padding-top: .5em;
+}
+
+// posts
+
+article > header {
+    margin-bottom: 1em;
 }
