switch to "readable" theme

--- a/site.tmpl
+++ b/site.tmpl
@@ -22,7 +22,7 @@
   <meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=alexander.solovyov.myopenid.com">
 
   <link rel="stylesheet" type="text/css" href="{{ .Rel "/static/style.css" }}">
-  <script type="text/javascript" src="{{ .Rel "/static/main.js" }}"></script>
+  <script type="text/javascript" src="{{ .Rel "/static/stuff.js" }}"></script>
   <script type="text/javascript">
   var _gaq = [['_setAccount', 'UA-317760-3'], ['_trackPageview']];
   (function(d, t) {
