--- a/src/static/style.less
+++ b/src/static/style.less
@@ -16,6 +16,9 @@
 // Responsive
 @import "src/static/bootstrap/responsive.less";
 
+@import "src/static/bootstrap/bootswatch.less";
+
+
 .container {
     // max-width: 40em;
 }
