fix links to less files

--- a/src/static/style.less
+++ b/src/static/style.less
@@ -1,27 +1,23 @@
-@import "src/static/bootstrap/reset.less";
+@import "static/bootstrap/reset.less";
 
 // Core variables and mixins
-@import "src/static/bootstrap/variables.less"; // Modify this for custom colors, font-sizes, etc
-@import "src/static/bootstrap/mixins.less";
+@import "static/bootstrap/variables.less"; // Modify this for custom colors, font-sizes, etc
+@import "static/bootstrap/mixins.less";
 
 // Grid system and page structure
-@import "src/static/bootstrap/scaffolding.less";
-@import "src/static/bootstrap/grid.less";
-@import "src/static/bootstrap/layouts.less";
+@import "static/bootstrap/scaffolding.less";
+@import "static/bootstrap/grid.less";
+@import "static/bootstrap/layouts.less";
 
 // Base CSS
-@import "src/static/bootstrap/type.less";
-@import "src/static/bootstrap/code.less";
+@import "static/bootstrap/type.less";
+@import "static/bootstrap/code.less";
 
 // Responsive
-@import "src/static/bootstrap/responsive.less";
+@import "static/bootstrap/responsive.less";
 
-@import "src/static/bootstrap/bootswatch.less";
+@import "static/bootstrap/bootswatch.less";
 
-
-.container {
-    // max-width: 40em;
-}
 
 #site-title {
     background: black;
