fix blockquote style a bit

--- a/src/static/style.less
+++ b/src/static/style.less
@@ -68,6 +68,11 @@ dd + dt {
     padding-top: .5em;
 }
 
+blockquote p {
+    margin-bottom: @baseLineHeight / 2;
+    line-height: @baseLineHeight;
+}
+
 // post listing
 
 .post-list {
