--- a/src/static/bootstrap/variables.less
+++ b/src/static/bootstrap/variables.less
@@ -49,7 +49,7 @@
 @monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
 
 @baseFontSize:          17px;
-@baseFontFamily:        @serifFontFamily;
+@baseFontFamily:        @sansFontFamily;
 @baseLineHeight:        26px;
 @altFontFamily:         @sansFontFamily;
 
