--- a/site.tmpl
+++ b/site.tmpl
@@ -59,7 +59,7 @@
   <header>
     <h1>{{ .Title }}</h1>
 
-    <div class="details">
+    <div class="note">
       <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
         {{ .Date.Format "2006, January 02" }}
       </time>
