make it a bit narrower

--- a/src/static/style.less
+++ b/src/static/style.less
@@ -20,6 +20,9 @@
 
 @import "src/static/highlight-default.less";
 
+.container {
+    max-width: 40em;
+}
 
 #site-title {
     background: black;
@@ -80,11 +83,11 @@ blockquote p {
 .post-list {
     line-height: 28px;
 
-    .span12 {
+    .span8 {
         text-align: center;
     }
     @media (min-width: 768px) {
-        .span4 {
+        .span2 {
             text-align: right;
         }
     }
