--- a/site.tmpl
+++ b/site.tmpl
@@ -34,7 +34,7 @@
   </script>
 </head>
 <body class="container">
-  <header>
+  <header role="banner">
     <h2 id="site-title"><a href="/">solovyov.net</a></h2>
   </header>
 
@@ -78,7 +78,7 @@
   {{ .Content }}
   </section>
 
-  <div id="disqus_thread"></div>
+  <footer id="disqus_thread"></footer>
   <script type="text/javascript">
     (function(d, t) {
       var e = d.createElement(t);
