ok, rel author works if i have both of them

--- a/site.tmpl
+++ b/site.tmpl
@@ -15,7 +15,8 @@
         title="{{ .Site.Other.Title }} english posts" href="http://feeds.feedburner.com/BloggingSpree">
   <title>{{ .Site.Other.Title }}{{ if .Title }}: {{ .Title }}{{ end }}</title>
 
-  <link rel="me" href="https://plus.google.com/117696497748245979543">
+  <link rel="author" href="http://solovyov.net/about/">
+  <link rel="author" href="https://plus.google.com/117696497748245979543">
 
   <link rel="openid.server" href="http://www.myopenid.com/server">
   <link rel="openid.delegate" href="http://alexander.solovyov.myopenid.com/">
