links to slides

--- a/site.tmpl
+++ b/site.tmpl
@@ -83,6 +83,7 @@
 
   <footer id="disqus_thread"></footer>
   <script type="text/javascript">
+    // var disqus_identifier = "http://solovyov.net/{{ .Url }}";
     (function(d, t) {
       var e = d.createElement(t);
       e.src = 'http://solovyovnet.disqus.com/embed.js';
