back to basics: blue color for links, white background

--- a/src/static/bootstrap/variables.less
+++ b/src/static/bootstrap/variables.less
@@ -1,4 +1,5 @@
 // Readable 2.2.2
+// with blue links
 // Variables
 // --------------------------------------------------
 
@@ -32,13 +33,13 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        #F6F6F6;
+@bodyBackground:        #FFFFFF;
 @textColor:             @grayDark;
 
 
 // Links
 // -------------------------
-@linkColor:             @red;
+@linkColor:             #2a5db0;
 @linkColorHover:        darken(@linkColor, 5%);
 
 
