anchorify all the shit!

--- a/site.tmpl
+++ b/site.tmpl
@@ -89,6 +89,7 @@
       e.src = 'http://solovyovnet.disqus.com/embed.js';
       d.getElementsByTagName('head')[0].appendChild(e);
     })(document, 'script');
+	anchorify();
   </script>
 </article>
 {{ end }}
