--- a/utils.tmpl
+++ b/utils.tmpl
@@ -1,7 +1,7 @@
 {{/* -*- mode: go-template -*- */}}
 
-{{define "post-date"}}
-<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-  {{ .Date.Format "2006, Jan 2" }}
+{{define "date"}}
+<time datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
+  {{ .Format "2006, January 02" }}
 </time>
 {{end}}
