add more interesting project listing

--- a/src/static/style.less
+++ b/src/static/style.less
@@ -78,6 +78,13 @@ blockquote p {
     line-height: @baseLineHeight;
 }
 
+.projects {
+    text-align: center;
+    .span4 {
+        height: 150px;
+    }
+}
+
 // post listing
 
 .post-list {
