update project list

--- a/src/static/style.less
+++ b/src/static/style.less
@@ -83,6 +83,12 @@ blockquote p {
     .span4 {
         height: 150px;
     }
+
+    .star {
+        height: 20px;
+        width: 20px;
+        margin-top: -0.3em;
+    }
 }
 
 // post listing
