--- a/site.tmpl
+++ b/site.tmpl
@@ -107,7 +107,10 @@
 
 {{define "one-link"}}
 <article>
-<dt>{{ .Title }} <a href="{{ .Rel .Url }}"><span class="info">-> {{ template "date" .Date }}</span></a></dt>
+<dt>
+  <a href="{{ .Other.Link }}">{{ .Title }}</a>
+  <a href="{{ .Rel .Url }}"><span class="info">-> {{ template "date" .Date }}</span></a>
+</dt>
 <dd>{{ .Content }}</dd>
 </article>
 {{end}}
