linksoup atom feed

--- a/site.tmpl
+++ b/site.tmpl
@@ -13,6 +13,8 @@
         title="{{ .Site.Other.Title }} russian posts" href="http://feeds.feedburner.com/AmazonByteflow">
   <link rel="alternate" type="application/atom+xml"
         title="{{ .Site.Other.Title }} english posts" href="http://feeds.feedburner.com/BloggingSpree">
+  <link rel="alternate" type="application/atom+xml"
+        title="{{ .Site.Other.Title }} linksoup" href="{{ .Rel "/linksoup.atom" }}">
   <title>{{ .Site.Other.Title }}{{ if .Title }}: {{ .Title }}{{ end }}</title>
 
   <link rel="author" href="http://solovyov.net/about/">
