--- a/src/static/style.less
+++ b/src/static/style.less
@@ -127,3 +127,15 @@ h1, h2, h3, h4, h5 {
         display: inline;
     }
 }
+
+// links
+
+.dropcap {
+    font-size: 3em;
+    display: inline-block;
+    margin-bottom: -2px;
+}
+
+dt.link-title + dd img {
+    margin-top: 5px;
+}
