--- a/src/static/style.less
+++ b/src/static/style.less
@@ -13,11 +13,16 @@
 @import "src/static/bootstrap/type.less";
 @import "src/static/bootstrap/code.less";
 
+// stuff
+@import "src/static/bootstrap/navs.less";
+
 // Responsive
 @import "src/static/bootstrap/responsive.less";
 
+// theme
 @import "src/static/bootstrap/bootswatch.less";
 
+// syntax highlighting
 @import "src/static/highlight-default.less";
 
 .container {
