--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -62,32 +62,17 @@ server {
     # drop date
     rewrite "^/(blog|en)/(\d{4})/\d\d/\d\d/(.*)" /$1/$2/$3 permanent;
     # year index
-    rewrite "^/(blog|en)/(\d{4})/$" /$1\#$2 permanent;
+    rewrite "^/(blog|en)/(\d{4})/$" "/$1#$2" permanent;
 }
 
 server {
     listen <%= ENV['PORT'] %>;
     server_name piranha.org.ua www.piranha.org.ua www.solovyov.net;
-    rewrite ^/(.*) http://solovyov.net/$1 permanent;
+    return 301 $scheme://solovyov.net$request_uri;
 }
 
 server {
     server_name blog.piranha.org.ua;
     listen <%= ENV['PORT'] %>;
-    rewrite ^/(.*) http://solovyov.net/blog/$1 permanent;
-}
-
-server {
-    server_name blog.ingspree.net ingspree.net;
-    listen <%= ENV['PORT'] %>;
-    rewrite ^/(.*) http://solovyov.net/en/$1 permanent;
-}
-
-server {
-    server_name blogg.ingspree.net;
-    listen <%= ENV['PORT'] %>;
-    rewrite ^/blog(.*) http://solovyov.net/en$1 permanent;
-    rewrite ^/.* http://solovyov.net/ permanent;
-}
-
+    return 301 $scheme://solovyov.net/blog$request_uri;
 }
