lesser dependency on feedburner

--- a/site.tmpl
+++ b/site.tmpl
@@ -10,9 +10,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="alternate" type="application/atom+xml"
-        title="{{ .Site.Other.Title }} russian posts" href="http://feeds.feedburner.com/AmazonByteflow">
+        title="{{ .Site.Other.Title }} russian posts" href="http://solovyov.net/blog.atom">
   <link rel="alternate" type="application/atom+xml"
-        title="{{ .Site.Other.Title }} english posts" href="http://feeds.feedburner.com/BloggingSpree">
+        title="{{ .Site.Other.Title }} english posts" href="http://solovyov.net/en.atom">
   <link rel="alternate" type="application/atom+xml"
         title="{{ .Site.Other.Title }} linkroll" href="{{ .Rel "/links.atom" }}">
   <title>{{ .Site.Other.Title }}{{ if .Title }}: {{ .Title }}{{ end }}</title>
