--- a/src/static/bootstrap/code.less
+++ b/src/static/bootstrap/code.less
@@ -16,7 +16,7 @@ pre {
 // Inline code
 code {
   padding: 2px 4px;
-  color: black;
+  color: #d14;
   background-color: #f7f7f9;
   border: 1px solid #e1e1e8;
   white-space: nowrap;
