--- a/nginx.conf.erb
+++ b/nginx.conf.erb
@@ -10,6 +10,7 @@ events {
 http {
 	include mime.types;
     server_names_hash_bucket_size 64;
+    types_hash_bucket_size 64;
 
 server {
     listen <%= ENV['PORT'] %>;
