--- a/src/static/style.less
+++ b/src/static/style.less
@@ -15,6 +15,7 @@
 
 // stuff
 @import "src/static/bootstrap/navs.less";
+@import "src/static/bootstrap/labels-badges.less";
 
 // Responsive
 @import "src/static/bootstrap/responsive.less";
