mark favorites and toggle to hide others

--- a/src/static/style.less
+++ b/src/static/style.less
@@ -90,11 +90,11 @@ blockquote p {
         height: 150px;
     }
 
-    .star {
-        height: 20px;
-        width: 20px;
-        margin-top: -0.3em;
-    }
+}
+.star {
+    height: 1em;
+    width: 1em;
+    margin-top: -0.3em;
 }
 
 // post listing
@@ -110,12 +110,21 @@ blockquote p {
             text-align: right;
         }
     }
+
+    .favorite {
+    }
 }
 
 // posts
 
 article > header {
     margin-bottom: 1em;
+}
+
+.nav-pills {
+    margin: 0 auto;
+    padding: 0;
+    width: 10em;
 }
 
 // about
