--- a/site.tmpl
+++ b/site.tmpl
@@ -60,7 +60,7 @@
 {{ template "footer" . }}{{ end }}
 
 {{ define "post" }}
-<script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
+<script src="{{ version . "static/highlight.pack.js" }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
 <article>
