--- a/site.tmpl
+++ b/site.tmpl
@@ -20,11 +20,8 @@
   <link rel="author" href="http://solovyov.net/about/">
   <link rel="author" href="https://plus.google.com/117696497748245979543">
 
-  <link rel="openid.server" href="http://www.myopenid.com/server">
-  <link rel="openid.delegate" href="http://alexander.solovyov.myopenid.com/">
-  <link rel="openid2.local_id" href="http://alexander.solovyov.myopenid.com/">
-  <link rel="openid2.provider" href="http://www.myopenid.com/server">
-  <meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=alexander.solovyov.myopenid.com">
+  <link rel="openid2.provider" href="https://openid.stackexchange.com/openid/provider">
+  <link rel="openid2.local_id" href="https://openid.stackexchange.com/user/76e7488b-6c80-4941-8f5a-0e4ba7c6b592">
 
   <link rel="stylesheet" type="text/css" href="{{ version . "static/style.css" }}">
   <script type="text/javascript" src="{{ version . "static/stuff.js" }}"></script>
