--- a/site.tmpl
+++ b/site.tmpl
@@ -26,14 +26,14 @@
   <link rel="stylesheet" type="text/css" href="{{ version . "static/style.css" }}">
   <script type="text/javascript" src="{{ version . "static/stuff.js" }}"></script>
   <script type="text/javascript">
-  var _gaq = [['_setAccount', 'UA-317760-3'], ['_trackPageview']];
-  setTimeout("_gaq.push(['_trackEvent', '15_seconds', 'read'])", 15000);
-  (function(d, t) {
-    var g = d.createElement(t),
-        s = d.getElementsByTagName(t)[0];
-    g.src = 'http://www.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g, s);
-  }(document, 'script'));
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-317760-3', 'auto');
+	ga('send', 'pageview');
+	setTimeout("ga('send', 'event', 'read', '15_seconds')", 15000);
   </script>
 </head>
 <body class="container">
