--- a/site.tmpl
+++ b/site.tmpl
@@ -25,15 +25,13 @@
 
   <link rel="stylesheet" type="text/css" href="{{ version . "static/style.css" }}">
   <script type="text/javascript" src="{{ version . "static/stuff.js" }}"></script>
-  <script type="text/javascript">
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  	ga('create', 'UA-317760-3', 'auto');
-	ga('send', 'pageview');
-	setTimeout("ga('send', 'event', 'read', '15_seconds')", 15000);
+  <script async src='//www.google-analytics.com/analytics.js'></script>
+  <script>
+    var ga=ga||function(){ (ga.q=ga.q||[]).push(arguments) };
+    ga.l = 1*new Date();
+      ga('create', 'UA-317760-3', 'auto');
+    ga('send', 'pageview');
+    setTimeout(ga, 15000, 'send', 'event', 'read', '15_seconds');
   </script>
 </head>
 <body class="container">
@@ -65,13 +63,13 @@
     <h1>{{ .Title }}</h1>
 
     <div class="info">
-	  {{ template "date" .Date }}
+      {{ template "date" .Date }}
 
-	  &mdash;
+      &mdash;
 
-	  <a href="{{ or .Other.Authorlink (.Rel "/about/") }}">{{ or .Other.Author .Site.Other.Author }}</a>
+      <a href="{{ or .Other.Authorlink (.Rel "/about/") }}">{{ or .Other.Author .Site.Other.Author }}</a>
 
-	  &mdash;
+      &mdash;
 
       {{ range $i, $t := .Tags }}{{if $i}},{{end}}
       <a href="/tags/{{ $t }}/">{{ $t }}</a>{{ end }}
@@ -90,7 +88,7 @@
       e.src = 'http://solovyovnet.disqus.com/embed.js';
       d.getElementsByTagName('head')[0].appendChild(e);
     })(document, 'script');
-	anchorify({sel: 'h2, h3, h4, h5'});
+    anchorify({sel: 'h2, h3, h4, h5'});
   </script>
 </article>
 {{ end }}
