--- a/site.tmpl
+++ b/site.tmpl
@@ -25,11 +25,13 @@
 
   <link rel="stylesheet" type="text/css" href="{{ version . "static/style.css" }}">
   <script type="text/javascript" src="{{ version . "static/stuff.js" }}"></script>
-  <script async src='//www.google-analytics.com/analytics.js'></script>
   <script>
-    var ga=ga||function(){ (ga.q=ga.q||[]).push(arguments) };
-    ga.l = 1*new Date();
-      ga('create', 'UA-317760-3', 'auto');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-317760-3', 'auto');
     ga('send', 'pageview');
     setTimeout(ga, 15000, 'send', 'event', 'read', '15_seconds');
   </script>
