clicky is interesting

--- a/site.tmpl
+++ b/site.tmpl
@@ -57,6 +57,19 @@
   </footer>
 </div>
 </div>
+
+<script>
+	(function(w,d) {
+	  w.clicky_site_ids = w.clicky_site_ids || [];
+	  w.clicky_site_ids.push(101012474);
+	  var el = d.createElement('script');
+	  el.async = 1;
+	  el.src = '//static.getclicky.com/js';
+	  document.body.appendChild(el);
+	})(window, document);
+</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101012474ns.gif" /></p></noscript>
+
 </body>
 </html>
 {{ end }}
