--- a/site.tmpl
+++ b/site.tmpl
@@ -58,17 +58,11 @@
 </div>
 </div>
 
-<script>
-	(function(w,d) {
-	  w.clicky_site_ids = w.clicky_site_ids || [];
-	  w.clicky_site_ids.push(101012474);
-	  var el = d.createElement('script');
-	  el.async = 1;
-	  el.src = '//static.getclicky.com/js';
-	  document.body.appendChild(el);
-	})(window, document);
+<script type="text/javascript">
+    window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src="//cdn.heapanalytics.com/js/heap-"+e+".js";document.body.appendChild(a);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
+	heap.load("3471899570"); // prod
+    // heap.load("330442487"); // dev
 </script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101012474ns.gif" /></p></noscript>
 
 </body>
 </html>
