replace pngs with inline svgs

--- a/site.tmpl
+++ b/site.tmpl
@@ -53,7 +53,7 @@
 
 {{ define "footer" }}
   <footer>
-    &#169; 2006&ndash;2015 <a href="{{ .Rel "/about/" }}">{{ .Site.Other.Author }}</a>
+    &#169; 2006&ndash;2017 <a href="{{ .Rel "/about/" }}">{{ .Site.Other.Author }}</a>. Icons from <a href="https://www.flaticon.com/">Flaticon</a>.
   </footer>
 </div>
 </div>
