--- a/site.tmpl
+++ b/site.tmpl
@@ -1,7 +1,7 @@
 {{/* -*- mode: go-template -*- */}}
 
 {{ define "header" }}<!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="author" content="{{ .Site.Other.Author }}">
@@ -12,7 +12,7 @@
     {{ with cut "<section>" "</section>" .Content }}{{ excerpt . 50 | strip_html }}{{ end }}
   {{ end }}
   ">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="alternate" type="application/atom+xml"
         title="{{ .Site.Other.Title }} russian posts" href="http://solovyov.net/blog.atom">
@@ -28,7 +28,7 @@
   <link rel="openid2.provider" href="https://openid.stackexchange.com/openid/provider">
   <link rel="openid2.local_id" href="https://openid.stackexchange.com/user/76e7488b-6c80-4941-8f5a-0e4ba7c6b592">
 
-  <link rel="stylesheet" type="text/css" href="{{ version . "static/style.css" }}">
+  <link rel="stylesheet" type="text/css" href="{{ version . "static/main.css" }}">
   <script async="true" src="{{ version . "static/stuff.js" }}"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -53,7 +53,8 @@
 
 {{ define "footer" }}
   <footer>
-    &#169; 2006&ndash;2017 <a href="{{ .Rel "/about/" }}">{{ .Site.Other.Author }}</a>. Icons from <a href="https://www.flaticon.com/">Flaticon</a>.
+    &#169; 2006&ndash;2017 <a href="{{ .Rel "/about/" }}">{{ .Site.Other.Author }}</a>.
+	{{ if eq .Url "" }} Icons from <a href="https://www.flaticon.com/">Flaticon</a>. {{ end }}
   </footer>
 </div>
 </div>
@@ -67,6 +68,8 @@
 {{ template "footer" . }}{{ end }}
 
 {{ define "post" }}
+<link rel="amphtml" href="./amp/" />
+
 <script src="{{ version . "static/highlight.pack.js" }}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
@@ -110,7 +113,9 @@
 # Pages tagged with {{ .Title }}
 
 {{ range .Site.Pages.WithTag .Title }}
+{{ if not (contains "amp" .Url) }}
 - [{{ .Title }}](../../{{ .Url }})
+{{ end }}
 {{ end }}
 {{end}}
 
