--- a/src/static/mobi.css
+++ b/src/static/mobi.css
@@ -1,3 +1,4 @@
+/* Mobi.css v1.0.1 http://getmobicss.com */
 @charset "UTF-8";
 html {
   box-sizing: border-box; }
@@ -18,7 +19,7 @@ html {
 body {
   background-color: #f3f3f3;
   color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Hiragino Sans GB", "Microsoft Yahei", "微软雅黑", Arial, Helvetica, STHeiti, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", "Cantarell", Arial, Helvetica, sans-serif;
   font-size: 1.8rem;
   line-height: 1.5;
   margin: 0; }
@@ -29,7 +30,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 30px 0 0; }
+  margin: 32px 0 0; }
 
 p,
 blockquote,
@@ -41,7 +42,7 @@ ol,
 pre,
 address,
 figure {
-  margin: 15px 0 0; }
+  margin: 14px 0 0; }
 
 h1,
 h2,
@@ -81,26 +82,30 @@ strong,
 dt {
   font-weight: 600; }
 
-code {
+code,
+kbd,
+samp {
   background-color: rgba(0, 0, 0, 0.05);
   font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-size: 85%;
-  padding: 2px 3px; }
+  padding: 0.1em 0.2em; }
 
 pre {
   max-height: 300px;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   background-color: rgba(0, 0, 0, 0.05);
-  font-size: 1.5rem;
+  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-size: 1.3rem;
   line-height: 1.2;
-  margin-left: -15px;
-  margin-right: -15px;
-  padding: 15px; }
+  margin-left: -14px;
+  margin-right: -14px;
+  padding: 14px; }
   pre code {
     background-color: transparent;
+    font-size: 1.3rem;
     padding: 0; }
-  @media (min-width: 738px) {
+  @media (min-width: 740px) {
     pre {
       margin-left: 0;
       margin-right: 0; } }
@@ -108,11 +113,11 @@ pre {
 blockquote {
   border-left: 5px solid #ddd;
   color: #777;
-  padding-left: 15px; }
+  padding-left: 14px; }
 
 ul,
 ol {
-  padding-left: 30px; }
+  padding-left: 28px; }
 
 dt,
 dd,
@@ -149,7 +154,13 @@ address {
 
 mark {
   background-color: #ff0;
-  color: #333; }
+  color: #333;
+  padding: 0 .2em; }
+
+abbr[title] {
+  border-bottom: 0;
+  text-decoration: underline;
+  text-decoration: underline dotted; }
 
 audio:not([controls]) {
   display: none;
@@ -158,6 +169,10 @@ audio:not([controls]) {
 img {
   max-width: 100%;
   vertical-align: middle; }
+
+audio,
+video {
+  width: 100%; }
 
 [role="button"] {
   cursor: pointer; }
@@ -176,20 +191,23 @@ textarea {
       touch-action: manipulation; }
 
 button,
+input,
+select,
+textarea {
+  font: inherit; }
+
+button,
 html [type=button],
 [type=reset],
 [type=submit],
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; }
+  -webkit-appearance: button;
+          appearance: button; }
 
 [type=search] {
-  -webkit-appearance: textfield; }
-
-[type="date"],
-[type="time"],
-[type="datetime-local"],
-[type="month"] {
-  -webkit-appearance: listbox; }
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none; }
 
 ::-webkit-file-upload-button {
   font: inherit; }
@@ -197,56 +215,137 @@ html [type=button],
 [hidden] {
   display: none; }
 
+fieldset {
+  border: 1px solid #ddd;
+  margin: 14px 0 0;
+  padding: 0 14px 14px; }
+
+legend {
+  padding: 0 3px; }
+
+optgroup {
+  color: #777;
+  font-style: normal;
+  font-weight: normal; }
+
+option {
+  color: #333; }
+
+progress {
+  width: 100%; }
+
 .container {
   background-color: #fff;
-  max-width: 738px;
+  max-width: 740px;
   min-width: 320px;
-  outline: 15px solid #fff;
+  outline: 14px solid #fff;
   overflow: hidden;
-  padding: 0 15px 15px;
+  padding: 0 14px 14px;
   width: 100%; }
 
 @media (min-width: 1041px) {
   .container {
     max-width: 768px;
     outline: 0;
-    padding: 0 30px 15px; } }
+    padding: 0 28px 14px; } }
 
-.row {
+.top-gap-big,
+.form .top-gap-big {
+  margin-top: 32px; }
+
+.top-gap,
+.form .top-gap {
+  margin-top: 14px; }
+
+.top-gap-0,
+.form .top-gap-0 {
+  margin-top: 0; }
+
+.flex-left,
+.flex-center,
+.flex-right,
+.flex-top,
+.flex-middle,
+.flex-bottom,
+.flex-vertical {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-flow: row nowrap;
       -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
-  margin-left: -15px;
-  margin-right: -15px; }
+          flex-flow: row nowrap; }
 
-.col,
-.col-1-2,
-.col-1-3,
-.col-2-3,
-.col-1-4,
-.col-3-4 {
-  padding-left: 7px;
-  padding-right: 7px; }
-  .col:first-child,
-  .col-1-2:first-child,
-  .col-1-3:first-child,
-  .col-2-3:first-child,
-  .col-1-4:first-child,
-  .col-3-4:first-child {
-    padding-left: 15px; }
-  .col:last-child,
-  .col-1-2:last-child,
-  .col-1-3:last-child,
-  .col-2-3:last-child,
-  .col-1-4:last-child,
-  .col-3-4:last-child {
-    padding-right: 15px; }
+.flex-left,
+.flex-center,
+.flex-right,
+.flex-top,
+.flex-middle,
+.flex-bottom,
+.flex-vertical.flex-left,
+.flex-vertical.flex-center,
+.flex-vertical.flex-right,
+.flex-vertical.flex-top,
+.flex-vertical.flex-middle,
+.flex-vertical.flex-bottom {
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start; }
 
-.col {
+.flex-center,
+.flex-vertical.flex-middle {
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.flex-right,
+.flex-vertical.flex-bottom {
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
+
+.flex-top,
+.flex-vertical.flex-left {
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start; }
+
+.flex-middle,
+.flex-vertical.flex-center {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.flex-bottom,
+.flex-vertical.flex-right {
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end; }
+
+.units-gap {
+  margin-left: -7px;
+  margin-right: -7px; }
+  .units-gap > .unit,
+  .units-gap > .unit-0,
+  .units-gap > .unit-1-2,
+  .units-gap > .unit-1-3,
+  .units-gap > .unit-2-3,
+  .units-gap > .unit-1-4,
+  .units-gap > .unit-3-4 {
+    padding-left: 7px;
+    padding-right: 7px; }
+
+.unit {
   -webkit-flex-basis: 0;
       -ms-flex-preferred-size: 0;
           flex-basis: 0;
@@ -256,44 +355,69 @@ html [type=button],
           flex-grow: 1;
   max-width: 100%; }
 
-.col-1-2,
-.col-1-3,
-.col-2-3,
-.col-1-4,
-.col-3-4 {
+.unit-1-2,
+.unit-1-3,
+.unit-2-3,
+.unit-1-4,
+.unit-3-4 {
   -webkit-flex-shrink: 0;
       -ms-flex-negative: 0;
           flex-shrink: 0; }
 
-.col-1-2 {
+.unit-1-2 {
   -webkit-flex-basis: 50%;
       -ms-flex-preferred-size: 50%;
           flex-basis: 50%;
   max-width: 50%; }
 
-.col-1-3 {
+.unit-1-3 {
   -webkit-flex-basis: 33.33%;
       -ms-flex-preferred-size: 33.33%;
           flex-basis: 33.33%;
   max-width: 33.33%; }
 
-.col-2-3 {
+.unit-2-3 {
   -webkit-flex-basis: 66.67%;
       -ms-flex-preferred-size: 66.67%;
           flex-basis: 66.67%;
   max-width: 66.67%; }
 
-.col-1-4 {
+.unit-1-4 {
   -webkit-flex-basis: 25%;
       -ms-flex-preferred-size: 25%;
           flex-basis: 25%;
   max-width: 25%; }
 
-.col-3-4 {
+.unit-3-4 {
   -webkit-flex-basis: 75%;
       -ms-flex-preferred-size: 75%;
           flex-basis: 75%;
   max-width: 75%; }
+
+.flex-vertical {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column; }
+  .flex-vertical > .unit,
+  .flex-vertical > .unit-0,
+  .flex-vertical > .unit-1-2,
+  .flex-vertical > .unit-1-3,
+  .flex-vertical > .unit-2-3,
+  .flex-vertical > .unit-1-4,
+  .flex-vertical > .unit-3-4 {
+    max-width: none; }
+  .flex-vertical > .unit-1-2 {
+    max-height: 50%; }
+  .flex-vertical > .unit-1-3 {
+    max-height: 33.33%; }
+  .flex-vertical > .unit-2-3 {
+    max-height: 66.67%; }
+  .flex-vertical > .unit-1-4 {
+    max-height: 25%; }
+  .flex-vertical > .unit-3-4 {
+    max-height: 75%; }
 
 .table {
   background-color: #fff;
@@ -321,117 +445,118 @@ html [type=button],
   .form label {
     cursor: pointer;
     display: block;
-    margin-top: 15px;
+    line-height: 1.25;
+    margin-top: 14px;
     padding-bottom: 6px;
     padding-top: 6px; }
-  .form button,
-  .form select,
-  .form textarea,
-  .form input:not([type=checkbox]):not([type=radio]) {
-    display: block;
-    line-height: 1.5;
-    margin: 15px 0 0;
-    width: 100%; }
-  .form button,
-  .form select,
-  .form textarea,
-  .form [type=button],
-  .form [type=date],
-  .form [type=datetime-local],
-  .form [type=email],
-  .form [type=month],
-  .form [type=number],
-  .form [type=password],
-  .form [type=range],
-  .form [type=search],
-  .form [type=submit],
-  .form [type=tel],
   .form [type=text],
-  .form [type=time],
+  .form [type=password],
+  .form [type=email],
+  .form [type=search],
   .form [type=url],
-  .form [type=week] {
+  .form [type=tel],
+  .form [type=number],
+  .form textarea,
+  .form select {
     -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 3px;
     color: #333;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Hiragino Sans GB", "Microsoft Yahei", "微软雅黑", Arial, Helvetica, STHeiti, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", "Cantarell", Arial, Helvetica, sans-serif;
     font-size: 1.8rem;
-    padding: 5px 10px; }
-    .form button:focus,
-    .form select:focus,
-    .form textarea:focus,
-    .form [type=button]:focus,
-    .form [type=date]:focus,
-    .form [type=datetime-local]:focus,
-    .form [type=email]:focus,
-    .form [type=month]:focus,
-    .form [type=number]:focus,
-    .form [type=password]:focus,
-    .form [type=range]:focus,
-    .form [type=search]:focus,
-    .form [type=submit]:focus,
-    .form [type=tel]:focus,
+    padding: 5px 10px;
+    display: block;
+    line-height: 1.25;
+    margin: 14px 0 0;
+    width: 100%; }
     .form [type=text]:focus,
-    .form [type=time]:focus,
+    .form [type=password]:focus,
+    .form [type=email]:focus,
+    .form [type=search]:focus,
     .form [type=url]:focus,
-    .form [type=week]:focus {
+    .form [type=tel]:focus,
+    .form [type=number]:focus,
+    .form textarea:focus,
+    .form select:focus {
       border-color: #3399ff; }
+  @media (max-width: 1040px) {
+    .form [type=time],
+    .form [type=week],
+    .form [type=month],
+    .form [type=date],
+    .form [type=datetime-local] {
+      margin: 14px 0 0; } }
+  @media (min-width: 1041px) {
+    .form [type=time],
+    .form [type=week],
+    .form [type=month],
+    .form [type=date],
+    .form [type=datetime-local] {
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 3px;
+      color: #333;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", "Cantarell", Arial, Helvetica, sans-serif;
+      font-size: 1.8rem;
+      padding: 5px 10px;
+      display: block;
+      line-height: 1.25;
+      margin: 14px 0 0;
+      width: 100%; }
+      .form [type=time]:focus,
+      .form [type=week]:focus,
+      .form [type=month]:focus,
+      .form [type=date]:focus,
+      .form [type=datetime-local]:focus {
+        border-color: #3399ff; } }
   .form [type=checkbox],
   .form [type=radio] {
-    margin: 0 5px 0 0; }
-  .form [type=file] {
     cursor: pointer;
-    padding: 6px 0; }
-  .form button,
-  .form [type=button],
-  .form [type=submit],
-  .form [type=reset] {
-    text-align: center;
-    background-color: #f3f3f3;
-    cursor: pointer; }
-    .form button:hover, .form button:active,
-    .form [type=button]:hover,
-    .form [type=button]:active,
-    .form [type=submit]:hover,
-    .form [type=submit]:active,
-    .form [type=reset]:hover,
-    .form [type=reset]:active {
-      text-decoration: none; }
+    margin: 0 5px 0 0; }
   .form select {
-    background: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='20' viewBox='0 0 32 20'><path fill='#333' d='M0 0h32L16 20z'/></svg>") right 10px center no-repeat;
+    background: url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='20' viewBox='0 0 32 20'><path fill='#333' d='M0 0h32L16 20z'/></svg>") right 8px center no-repeat;
     background-size: 8px 8px;
     padding-right: 25px;
     cursor: pointer; }
+  .form [type=file],
+  .form [type=range] {
+    display: block;
+    line-height: 1.25;
+    margin: 14px 0 0;
+    width: 100%;
+    cursor: pointer;
+    padding: 6px 0; }
+  .form [type=color],
+  .form [type=image] {
+    cursor: pointer;
+    display: block;
+    margin: 14px 0 0; }
   .form [disabled] {
-    cursor: not-allowed;
-    opacity: .5; }
+    cursor: default;
+    opacity: .5;
+    pointer-events: none; }
   .form [readonly] {
     background-color: #f3f3f3; }
-  .form .btn-primary {
-    background-color: #40bf40;
-    border-color: #40bf40;
-    color: #fff; }
-    .form .btn-primary[disabled] {
-      cursor: not-allowed;
-      opacity: .5; }
-  .form .btn-danger {
-    color: #cc0000; }
-    .form .btn-danger[disabled] {
-      cursor: not-allowed;
-      opacity: .5; }
 
 .btn {
   display: block;
-  line-height: 1.5;
-  margin: 15px 0 0;
+  line-height: 1.25;
+  margin: 14px 0 0;
   width: 100%;
   -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 3px;
   color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Hiragino Sans GB", "Microsoft Yahei", "微软雅黑", Arial, Helvetica, STHeiti, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", "Cantarell", Arial, Helvetica, sans-serif;
   font-size: 1.8rem;
   padding: 5px 10px;
   text-align: center;
@@ -442,22 +567,25 @@ html [type=button],
   .btn:hover, .btn:active {
     text-decoration: none; }
   .btn[disabled] {
-    cursor: not-allowed;
-    opacity: .5; }
+    cursor: default;
+    opacity: .5;
+    pointer-events: none; }
 
 .btn-primary {
   background-color: #40bf40;
   border-color: #40bf40;
   color: #fff; }
   .btn-primary[disabled] {
-    cursor: not-allowed;
-    opacity: .5; }
+    cursor: default;
+    opacity: .5;
+    pointer-events: none; }
 
 .btn-danger {
   color: #cc0000; }
   .btn-danger[disabled] {
-    cursor: not-allowed;
-    opacity: .5; }
+    cursor: default;
+    opacity: .5;
+    pointer-events: none; }
 
 @media (max-width: 1040px) {
   .hide-on-mobile {
@@ -466,15 +594,6 @@ html [type=button],
 @media (min-width: 1041px) {
   .show-on-mobile {
     display: none; } }
-
-.mt-30 {
-  margin-top: 30px; }
-
-.mt-15 {
-  margin-top: 15px; }
-
-.mt-0 {
-  margin-top: 0; }
 
 .scroll-view {
   max-height: 300px;
@@ -489,58 +608,5 @@ html [type=button],
 
 .text-right {
   text-align: right; }
-
-.flex-left,
-.flex-center,
-.flex-right,
-.flex-top,
-.flex-middle,
-.flex-bottom {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: row nowrap;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap; }
-
-.flex-left {
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-      -ms-flex-pack: start;
-          justify-content: flex-start; }
-
-.flex-center {
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center; }
-
-.flex-right {
-  -webkit-box-pack: end;
-  -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-          justify-content: flex-end; }
-
-.flex-top {
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-      -ms-flex-align: start;
-              -ms-grid-row-align: flex-start;
-          align-items: flex-start; }
-
-.flex-middle {
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-              -ms-grid-row-align: center;
-          align-items: center; }
-
-.flex-bottom {
-  -webkit-box-align: end;
-  -webkit-align-items: flex-end;
-      -ms-flex-align: end;
-              -ms-grid-row-align: flex-end;
-          align-items: flex-end; }
 
 /*# sourceMappingURL=mobi.css.map */
