--- a/utils.tmpl
+++ b/utils.tmpl
@@ -5,3 +5,9 @@
   {{ .Format "2006, January 02" }}
 </time>
 {{end}}
+
+{{define "shortdate"}}
+<time datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
+  {{ .Format "January 02" }}
+</time>
+{{end}}
