more of those microthingies

--- a/site.tmpl
+++ b/site.tmpl
@@ -74,6 +74,8 @@
 <script>hljs.initHighlightingOnLoad();</script>
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
+  <meta name="mainEntityOfPage" content=".">
+
   <header>
     <h1 itemprop="headline">{{ .Title }}</h1>
 
