--- a/amp.tmpl
+++ b/amp.tmpl
@@ -51,16 +51,22 @@
 
 
 {{ define "amp-post" }}
-<article>
+<article itemscope itemtype="http://schema.org/BlogPosting">
+  <meta name="mainEntityOfPage" content="..">
+  <meta name="description" content="{{ excerpt .Content 50 | strip_html }}">
+
   <header>
-    <h1>{{ .Title }}</h1>
+    <h1 itemprop="headline">{{ .Title }}</h1>
 
     <div class="info">
       {{ template "date" .Date }}
 
       &mdash;
 
-      <a href="{{ or .Other.Authorlink (.Rel "/about/") }}">{{ or .Other.Author .Site.Other.Author }}</a>
+      <a href="{{ or .Other.Authorlink (.Rel "/about/") }}"
+	     itemprop="author" itemscope itemtype="http://schema.org/Person">
+	    <span itemprop="name">{{ or .Other.Author .Site.Other.Author }}</span>
+	  </a>
 
       &mdash;
 
