--- a/site.tmpl
+++ b/site.tmpl
@@ -74,7 +74,7 @@
 <script>hljs.initHighlightingOnLoad();</script>
 
 <article itemscope itemtype="http://schema.org/BlogPosting">
-  <meta name="mainEntityOfPage" content=".">
+  <meta itemprop="mainEntityOfPage" content=".">
 
   <header>
     <h1 itemprop="headline">{{ .Title }}</h1>
