--- a/site.tmpl
+++ b/site.tmpl
@@ -102,10 +102,10 @@
 
   <footer id="disqus_thread"></footer>
   <script type="text/javascript">
-    // var disqus_identifier = "http://solovyov.net/{{ .Url }}";
+    // var disqus_identifier = "https://solovyov.net/{{ .Url }}";
     (function(d, t) {
       var e = d.createElement(t);
-      e.src = 'http://solovyovnet.disqus.com/embed.js';
+      e.src = 'https://solovyovnet.disqus.com/embed.js';
       d.getElementsByTagName('head')[0].appendChild(e);
     })(document, 'script');
     anchorify({sel: 'h2, h3, h4, h5'});
