--- a/utils.tmpl
+++ b/utils.tmpl
@@ -1,7 +1,7 @@
 {{/* -*- mode: go-template -*- */}}
 
 {{define "date"}}
-<meta itemprop="datePublished" content="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
+<meta itemprop="datePublished dateModified" content="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
 <time datetime="{{ .Format "2006-01-02T15:04:05Z07:00" }}">
   {{ .Format "2006, January 02" }}
 </time>
