highload title slide background

--- a/slides.tmpl
+++ b/slides.tmpl
@@ -70,6 +70,7 @@
   .remark-slide-content {
       padding: 0 1.5em 1em 1.5em;
       font-size: 26pt;
+      background-size: 100%;
   }
 
   .mk-logo {
@@ -114,6 +115,10 @@
   }
   .invert h1 {
     color: white;
+  }
+
+  .ml-28 {
+    margin-left: 28px;
   }
 
   </style>
