--- a/slides.tmpl
+++ b/slides.tmpl
@@ -10,17 +10,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/remark/0.14.0/remark.min.js" type="text/javascript"></script>
   <link href="https://highlightjs.org/static/demo/styles/github.css"  rel="stylesheet">
   <style type="text/css">
-
-@media print {
-  .remark-slide-scaler {
-    width: 100% !important;
-    height: 100% !important;
-    transform: scale(1) !important;
-    top: 0 !important;
-    left: 0 !important;
-  }
-}
-
   .hljs-github .hljs { background: inherit; }
 
 
@@ -130,19 +119,28 @@
           return current > 1 ? current + ' / ' + total : ''
         }
     });
+
+    // dynamically set correct page size for printing
+    var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+    if (!r) return;
+    s.type = "text/css";
+    s.innerHTML = "@page { size: " + r.style.width + "px " + r.style.height +"px; }";
+    d.head.appendChild(s);
     }, 1);
 
-    /**
-      Set the page attribute dynamically, as needed for printing to PDF.
-     **/
-    (function() {
-        var d = document, s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
-        if (!r) return;
-        s.type = "text/css";
-        s.innerHTML = "@page { size: " + r.style.width + " " + r.style.height +"; }";
-        d.head.appendChild(s);
-    })();
   </script>
+  <style type="text/css">
+  /* remove page margins for printing */
+  @media print {
+    .remark-slide-scaler {
+      width: 100% !important;
+      height: 100% !important;
+      transform: scale(1) !important;
+      top: 0 !important;
+      left: 0 !important;
+    }
+  }
+  </style>
   <title>{{ .Content | cut "\n# " "\n" }}</title>
 </head>
 <body>
