add slide for dorm

--- a/slides.tmpl
+++ b/slides.tmpl
@@ -68,6 +68,13 @@
       background-size: 50px;
   }
 
+  .full-height {
+    background-size: auto 100%;
+  }
+  .full-width {
+    background-size: 100% auto;
+  }
+
   .remark-code { font-size: 24pt; }
 
   .full img {
