less annoying styling

--- a/src/static/style.scss
+++ b/src/static/style.scss
@@ -2,6 +2,10 @@ body {
     font-size: 20px;
 }
 
+pre {
+    background-color: #f8f8f8;
+}
+
 #site-title {
   background: black;
   display: inline-block;
